2012-01-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLDocument.m:
	* Source/NSXMLElement.m:
	Replace a few lines accidentally lost.

2012-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSXMLDocument.h:
	* Headers/Foundation/NSXMLNode.h:
	* Headers/Foundation/NSXMLDTD.h:
	* Headers/Foundation/NSXMLDTDNode.h:
	* Headers/Foundation/NSXMLElement.h:
	* Source/NSXMLDocument.m:
	* Source/NSXMLPrivate.h:
	* Source/NSXMLDTD.m:
	* Source/GSInternal.h:
	* Source/NSXMLNode.m:
	* Source/NSXMLDTDNode.m:
	* Source/NSXMLElement.m:
	The last revert still left lot's of ABI breakage, but reverting much
	further would lose a lot of work ... so here's an attempt to fix the
	ABI breakage by re-hiding instance variables again.

2012-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSMDNSNetServices.m:
	* Source/NSJSONSerialization.m:
	Cosmetic tweaks (whitespace)

2012-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLDocument.m:
	* Source/NSXMLNode.m:
	* Source/NSXMLElement.m:
	* Headers/Foundation/NSXMLDocument.h:
	* Headers/Foundation/NSXMLNode.h:
	* Headers/Foundation/NSXMLDTD.h:
	* Headers/Foundation/NSXMLElement.h:
	Revert latest changes to restore scheme for preventing ABI breakage
	and supporting both fragile and non-fragile ABIs..

2012-01-04  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSXMLDocument.h,
	* Headers/Foundation/NSXMLDTD.h: Comment out duplicate declaration of
	ivars to get base to compile again.

2012-01-03 16:33-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSXMLDocument.h
	* Headers/Foundation/NSXMLElement.h
	* Headers/Foundation/NSXMLNode.h: Move declarations.
	* Source/NSXMLDocument.m: Correct parsing issues.
	* Source/NSXMLElement.m: Remove local declaration of _children
	* Source/NSXMLNode.m: Remove internal.  Move all declarations here
	directly.

2012-01-03 14:22-EST Gregory John Casamento <greg.casamento@gmail.com>
